4-ingress/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: mongo-express-ingress
  namespace: application
spec:
  rules:
  - host: mongolocal.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port: 
              number: 8081
